[gd_scene load_steps=4 format=3 uid="uid://cf3kwelo8dwjm"]

[ext_resource type="Script" uid="uid://cudwi360ipfhu" path="res://addons/Ds_levels/loading_screens/default_loading_screen_2.gd" id="1_h2i6h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dky36"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0, 0, 0, 0.364706)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_ywb8g"]
font_size = 28

[node name="default_loading_screen_2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h2i6h")
metadata/_custom_type_script = "uid://cd8eav67n7hbh"

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dky36")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="level_name_label" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Level Name"
label_settings = SubResource("LabelSettings_ywb8g")

[node name="level_description_label" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Level Description"

[node name="level_path_label" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.545098)
layout_mode = 2
text = "Level path"

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
